--- a/app/template/fontend/template1/success.html
+++ b/app/template/fontend/template1/success.html
@@ -23,7 +23,7 @@
                <p class="woocommerce-thankyou-order-received txt_thanks">Cảm ơn bạn. Đơn hàng của bạn đã được nhận.</p>
                <ul class="woocommerce-thankyou-order-details order_details">
                   <li class="order">
-                     Số đơn hàng:   <strong><%$ord.ord_id%></strong>
+                     Số đơn hàng:   <strong>D<%$ord.ord_id%></strong>
                   </li>
                   <li class="date">
                      Ngày:       <strong><%$ord.add_datetime%></strong>
